# bloomberg-terminal-libya

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  idea  setup.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/api/v1/: analysis.py  data.py  routes.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/models/: data.py
backend/app/schemas/: data.py
backend/app/services/: analysis.py  forecasting.py  fulus_sync.py  telegram_scraper.py
backend/tests/: conftest.py  test_analysis.py  test_fulus_sync.py  test_telegram_scraper.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AIReasoning.tsx  NewsFeed.tsx  PriceChart.tsx  PriceTicker.tsx  SignalCard.tsx
frontend/src/hooks/: useWebSocket.ts
